--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,43 @@ header .header-button{
 main{
     /* 100vh - altezza header - altezza footer */
     /* height: calc (100vs - 70px - 80px) */
-    height: calc(100vh - 50px);
-    background-color: lightcoral;
+    height: calc(100vh - 150px);
+    background-color: black;
+    overflow: auto;
+}
+
+.participants-gallery{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.participant{
+    background-color: blue;
+    height: 200px;
+    width: 350px;
+    position: relative;
+    margin: 5px;
+}
+
+.participant img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.participant-name{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0,5);
+    color: white;
+    padding: 5px;
 }
 
 /* FOOTER */
 footer{
     height: 80px;
-    background-color: #666;
+    background-color: #333;
 }
